# vector-db-rag

./: .gitignore  package-lock.json  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
code_embedder/docs/: README.md
code_embedder/src/: code_embedder.py
coverage/: cobertura-coverage.xml  coverage-final.json  index.html
coverage/src/: App.tsx.html  index.html  main.tsx.html
coverage/src/components/: Counter.tsx.html  TodoItem.tsx.html  TodoList.tsx.html  index.html
coverage/src/types/: index.html  todo.ts.html
doc/: README.md
src/: App.tsx  index.css
src/components/: Counter.test.tsx  Counter.tsx  TodoItem.test.tsx  TodoItem.tsx  TodoList.test.tsx  TodoList.tsx
src/shared-utils-test/: index.ts
src/test/: setup.ts  utils.ts
src/test/utils/: async.ts  eventBus.ts  render.ts
