[project]
name = "code-embedder"
version = "0.1.0"
description = "프로젝트 코드베이스를 벡터 스토어에 임베딩하는 CLI 도구"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
dependencies = [
    "langchain>=0.3.25",
    "langchain-chroma>=0.2.3",
    "langchain-community>=0.3.23",
    "langchain-huggingface>=0.1.2",
    "python-dotenv>=1.1.0",
    "sentence-transformers>=3.1.1",
    "tokenizers>=0.21.1",
]
requires-python = ">=3.12.0"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src"]

[project.scripts]
code-embedder = "src.code_embedder:main" 
